@@ -14,6 +14,7 @@ There is now [a Carbon support mailing list](http://www.freelists.org/list/carbo
 
  * [Get-CertificateStore](http://get-carbon.org/help/Get-CertificateStore.html) now supports non-standard, custom certificate stores.
  * [Install-Certificate](http://get-carbon.org/help/Install-Certificate.html) now supports non-standard, custom certificate stores.
+ * [Uninstall-Certificate](http://get-carbon.org/help/Uninstall-Certificate.html) now supports non-standard, custom certificate stores.
  
 ## Bug Fixes
 
